[package]
name = "object-pool"
version = "0.5.0"
authors = ["CJP10"]
edition = "2018"
description = "A thread-safe object pool with automatic return and attach/detach semantics"
readme = "README.md"
repository = "https://github.com/CJP10/object-pool"
homepage = "https://github.com/CJP10/object-pool"
documentation = "https://docs.rs/object-pool"
keywords = ["atomic", "garbage", "non-blocking", "lock-free"]
categories = ["concurrency", "memory-management", "data-structures"]
license = "MIT/Apache-2.0"

[dependencies]
crossbeam-epoch = "0.8"
parking_lot = "0.10"

[dev-dependencies]
criterion = "0.3"
criterion-plot = "0.4"

[[bench]]
name = "bench"
harness = false