[package]
name = "object-pool"
version = "0.6.0"
authors = ["CJP10"]
edition = "2018"
description = "A thread-safe object pool with automatic return and attach/detach semantics"
readme = "README.md"
repository = "https://github.com/CJP10/object-pool"
homepage = "https://github.com/CJP10/object-pool"
documentation = "https://docs.rs/object-pool"
keywords = ["atomic", "garbage", "non-blocking", "lock-free"]
categories = ["concurrency", "memory-management", "data-structures"]
license = "MIT/Apache-2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[dependencies]
parking_lot = "0.12.3"

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[dev-dependencies]
criterion = "0.5.1"
criterion-plot = "0.5.0"

[[bench]]
name = "bench"
harness = false

[features]
experimental = []
